<resources>
    <string name="app_name">EasyToDo</string>
    <string name="todos_image">Image of todos</string>
    <string name="todos_text">You don\'t have any todos</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_off">Night mode is off</string>
    <string name="icon">Icon</string>
    <string name="easytodo">EasyToDo</string>
    <string name="version">Version: 1.0</string>
    <string name="madeby">Made by Rashad</string>
    <string name="contact">You can contact me at</string>
    <string name="email">rashadibrahimov01@gmail.com</string>
    <string name="close">Close</string>
    <string name="title">Title</string>
    <string name="add_alarm_image">Add Alarm Image</string>
    <string name="remind_me">Remind Me</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="todo_title_text">Text</string>
    <string name="first_letter">A</string>
    <string name="id">ID</string>
    <string name="titleTextView">Title TextView</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="snooze">Snooze</string>
    <string name="remove">Remove</string>
    <string name="position">Position</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="empty"> </string>
</resources>