<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTodoActivity"
    android:background="?attr/backgroundColor"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/close"
            android:onClick="onCloseClicked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close_white_24dp" />

        <EditText
            android:id="@+id/addTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:hint="@string/empty"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/title"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/addTitle"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:onClick="onSendClicked"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_send_white_24dp"
        android:focusable="true" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ImageView
            android:id="@+id/addAlarmImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/add_alarm_image"
            app:tint="?attr/alarmColor"
            app:srcCompat="@drawable/ic_add_alarm_gray_24dp" />

        <TextView
            android:id="@+id/remindMeText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/remind_me"
            android:textColor="?attr/remindMeSnoozeColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Switch
            android:id="@+id/remindMeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:theme="?attr/switchStyle"
            android:onClick="onSwitchClicked" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <EditText
            android:id="@+id/date"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/empty"
            android:importantForAutofill="no"
            android:inputType="date"
            android:gravity="center"
            android:cursorVisible="false"
            android:focusable="false"
            android:textColor="#808080"
            android:onClick="onDateClicked" />

        <TextView
            android:id="@+id/at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorAccent" />

        <EditText
            android:id="@+id/time"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="time"
            android:gravity="center"
            android:focusable="false"
            android:cursorVisible="false"
            android:hint="@string/empty"
            android:textColor="#808080"
            android:onClick="onTimeClicked" />
    </LinearLayout>

    <TextView
        android:id="@+id/reminderSetFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="43dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>